<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/Freq_pref_categ">
        <EditTextPreference
            android:inputType="number"
            android:key="prefDuration"
            android:summary="@string/pref_user_name_summary"
            android:title="@string/pref_duration" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/App_pref_categ">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="prefNotification"
            android:summary="@string/notifySummary"
            android:title="@string/notificationsTitle" />
        <ListPreference
            android:key="prefLanguage"
            android:title="@string/languageTitle" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_zamp_categ">
        <Preference
            android:key="prefCalibrate"
            android:summary="@string/prefCaliZampSummary"
            android:title="@string/prefCaliZampTitle" />
    </PreferenceCategory>
</PreferenceScreen>