<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:font="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:padding="@dimen/padding_dialog_30">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog"
        android:orientation="vertical">

        <com.zappkit.zappid.views.CustomFontTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/dp_10"
            android:text="@string/tv_activate_your_free_trial"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_large_20"
            android:textStyle="bold"
            font:fontText="font_helvetica_neue_bold.ttf" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_15"
            android:layout_marginStart="@dimen/dp_15"
            android:layout_marginLeft="@dimen/dp_15"
            android:orientation="vertical">

            <com.zappkit.zappid.views.CustomFontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/txt_message_billing_1"
                android:textAllCaps="false"
                android:textSize="@dimen/text_medium_15"
                font:fontText="font_helvetica_neue.ttf" />

            <com.zappkit.zappid.views.CustomFontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/txt_message_billing_2"
                android:textAllCaps="false"
                android:textSize="@dimen/text_medium_15"
                font:fontText="font_helvetica_neue.ttf" />

            <com.zappkit.zappid.views.CustomFontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/txt_message_billing_3"
                android:textAllCaps="false"
                android:textSize="@dimen/text_medium_15"
                font:fontText="font_helvetica_neue.ttf" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#7B52AB"
            android:orientation="horizontal">

            <com.zappkit.zappid.views.CustomFontButton
                android:id="@+id/btn_free"
                android:layout_width="0dp"
                android:layout_height="@dimen/height_button"
                android:layout_weight="1"
                android:background="@drawable/bg_font_button"
                android:gravity="center"
                android:text="@string/tv_7_day_s_free"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_small_12"
                font:fontText="font_helvetica_neue_bold.ttf" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/white" />

            <com.zappkit.zappid.views.CustomFontButton
                android:id="@+id/btn_later"
                android:layout_width="0dp"
                android:layout_height="@dimen/height_button"
                android:layout_weight="1"
                android:background="@drawable/bg_font_button"
                android:gravity="center"
                android:text="@string/txt_later"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_small_12"
                font:fontText="font_helvetica_neue_bold.ttf" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
