<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editnewfreq"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip"
        android:ems="10"
        android:hint="@string/myFrequenciesEditTextHint"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal" />

    <ListView
        android:id="@+id/frequency_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

    </ListView>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add_frequency_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5.0dip"
            android:layout_marginLeft="5.0dip"
            android:background="#7c22a9"
            android:clickable="true"
            android:text="@string/myFrequenciesCancel"
            android:textColor="#ffffffff" />

        <Button
            android:id="@+id/add_frequency_addbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10.0dip"
            android:layout_marginLeft="10.0dip"
            android:background="#7c22a9"
            android:clickable="true"
            android:text="@string/myFrequenciesAdd"
            android:textColor="#ffffffff" />
    </LinearLayout>
</LinearLayout>